Changed static dependency to full CDN requests. Deleted jQuery and bootstrap static files

--- a/views/chat.html
+++ b/views/chat.html
@@ -13,11 +13,10 @@
     <title>theHarvardClass</title>
 
     <!-- loads bootstrap.css -->
-    <!-- <link href="css/assets/bootstrap.min.css" rel="stylesheet"> : Offline Version -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 
     <!-- loads custom css file -->
-    <link rel="stylesheet" href="css/custom.css" rel="stylesheet">
+    <link rel="stylesheet" href="custom.css" rel="stylesheet">
 
 </head>
 <body style="font-family:Verdana">
@@ -152,19 +151,16 @@
 <script type="text/javascript" src="socket.io/socket.io.js"></script>
 
 <!-- jquery -->
-<!-- <script src="js/assets/jquery-2.1.1.min.js"></script> = Offline version -->
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
 <!-- Boostrap.js -->
-<!-- <script src="js/assets/bootstrap.min.js"></script> = Offline Version -->
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
 <!-- loads respond.js: enables responsive web designs in browsers that don't support CSS3 Media Queries - in particular, Internet Explorer 8 and under. -->
-<!-- <script src="js/assets/respond.js"></script> = Offline Version -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 
 <!-- customchat javascript file: should be loaded after jquery-->
-<script type="text/javascript" src="js/customchat.js"></script>
+<script type="text/javascript" src="customchat.js"></script>
 
 </body>
 </html>
