--- a/views/login.html
+++ b/views/login.html
@@ -71,6 +71,8 @@
 <!--end of jumbotron-->
 
 <!--start of login with Harvard ID-->
+
+<!--to hide use:  style="display: none"-->
 <div class="container text-center">
     <button type="submit" class="btn btn-default btn-danger btn-lg" id="harvardID">Log in with Harvard ID</button>
 </div>
@@ -79,7 +81,7 @@
 
 
 <!--start of custom student login form-->
-<div class="container" style="display: none">
+<div class="container">
     <form>
         <div class="form-group">
             <label for="customUsername">Username</label>
