Improved the UI of chat.html

--- a/views/chat.html
+++ b/views/chat.html
@@ -1,16 +1,11 @@
 ﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
-    <!--[if IE]>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <![endif]-->
+    <meta name="description" content="Harvard Website to ask questions in class"/>
+    <meta name="author" content="Jovin Mwilanga"/>
 
-    <title>theHarvardClass</title>
+    <title>HarvardClass</title>
 
     <!-- loads bootstrap.css -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
