--- a/views/login.html
+++ b/views/login.html
@@ -3,7 +3,9 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>theHarvardClass - Login</title>
+    <meta name="description" content="Harvard Website to ask questions in class"/>
+    <meta name="author" content="Jovin Mwilanga"/>
+    <title>HarvardClass - Login</title>
 
     <!-- loads bootstrap.css -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
@@ -138,6 +140,8 @@
 <!--end of footer-->
 
 
+
+
 <!-- JAVASCRIPT -->
 
 <!-- socket.io javascript -->
@@ -154,7 +158,5 @@
 
 <!-- customlogin javascript file: should be loaded after jquery-->
 <script type="text/javascript" src="customlogin.js"></script>
-
-
 </body>
 </html>
