--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -1,192 +1,32 @@
-/*chat body*/
-/*#chatBody {*/
-    /*padding: 50px 0em 0em 0em;*/
-    /*height: 100%;*/
-    /*width: 100%;*/
-    /*max-width: 1200px;*/
-    /*margin-left: auto;*/
-    /*margin-right: auto;*/
-    /*font-family: "Lucida Grande",arial,sans-serif;*/
-    /*font-size: 12px;*/
-    /*line-height: 20px;*/
-    /*background-color: rgb(217,237,247);*/
-/*}*/
-/*end of chat body*/
-
-/*navigation bar start*/
-/*.navbar.navbar-default {*/
-    /*background-color: darkgray;*/
-    /*color: #ffffff;*/
-    /*margin-bottom: 0em;*/
-/*}*/
-
-/*#logout {*/
-    /*visibility: hidden;*/
-/*}*/
-
-
-/*end of navigation bar*/
-
-/*welcome of login*/
-#welcome {
-    text-align: center;
-    color: darkslategray;
-    margin-top: 8em;
-    margin-bottom: 8em;
-}
-/*end of welcome of login*/
-
-/*the log in form*/
-
-.btn.btn-primary.btn-lg.btn-block {
-    background-color: darkgray;
-}
-/*end of log in form*/
-
-
-/*div.container {*/
-    /*margin: 0em 0em;*/
-    /*padding: 0em 0em;*/
-/*}*/
-
-/*questions column*/
-#wrap > div > div > div.col-md-7 {
-    margin: 0em 0em;
-    padding-right: 0em;
-    /*height: 100vh;*/
-    z-index: 1;
+body {
+    padding-bottom: 70px;
 }
 
-#wrap > div > div > div.col-md-7 > div > div.panel-body {
-    padding: 0em;
+
+/***************** questions feed *************************/
+.senderName {
+    font-weight: bold;
+    color: #0b97c4;
 }
 
-#wrap > div > div > div.col-md-7 > div > div.panel-body > ul > li:nth-child(1) > div {
-    height: 5px;
+.questionTime {
+    color: darkgray;
 }
 
-.panel {
-    border: none;
+/*bottom ask field*/
+.navbar-fixed-bottom{
+    z-index: 4;
 }
 
-#wrap > div > div > div.col-md-7 > div {
-    border-bottom-style: none;
-    border-top-style: none;
-    border-left-color: rgb(169,169,169);
-    border-right-color: rgb(169,169,169);
+/******************* end of questions field *******************/
+
+/***************** top voted column *************************/
+/***************** end of top voted column *************************/
+
+/***************** online users column *************************/
+
+.fa-user {
+    color: #0b97c4;
 }
 
-.panel {
-    border-bottom-style: none;
-    border-top-style: none;
-    border-left-color: rgb(169,169,169);
-    border-right-color: rgb(169,169,169);
-}
-
-.idd1 {
-    vertical-align: top;
-    margin-right: 2px;
-}
-
-.idd2 {
-    vertical-align: top;
-    margin-left: 2px;
-}
-
-.indqstn {
-    border-bottom: solid rgb(217, 237, 247);
-}
-
-textarea {
-    border: none;
-}
-
-.panel {
-    border: none;
-}
-
-/*end of questions column*/
-
-/*top voted questions*/
-#wrap > div > div > div.col-md-3 {
-    margin: 0em 0em;
-    padding: 0em 0em;
-    z-index: 1;
-}
-
-#wrap > div > div > div.col-md-3 > div > div.panel-heading {
-    background-color: rgb(217, 237, 247);
-}
-#wrap > div > div > div.col-md-3 > div {
-    border-bottom-style: none;
-    border-top-style: none;
-    border-left-color: rgb(169,169,169);
-    border-right-color: rgb(169,169,169);
-}
-
-#wrap > div > div > div.col-md-3 > div > div.panel-heading {
-    color: rgb(49, 112, 172);
-}
-
-#wrap > div > div > div.col-md-3 {
-    /*position: relative;*/
-    min-height: 100%;
-}
-
-/*end of top voted questions*/
-
-/*online*/
-#wrap > div > div > div.col-md-2 > div {
-    margin: 0em 0em;
-    padding: 0em;
-    z-index: 1;
-    border-bottom-style: none;
-    border-top-style: none;
-    border-left-color: rgb(169,169,169);
-    border-right-color: rgb(169,169,169);
-}
-
-#wrap > div > div > div.col-md-2 {
-    padding: 0em;
-}
-
-#wrap > div > div > div.col-md-2 > div > div.panel-heading {
-    color: rgb(49, 112, 172);
-}
-
-#wrap > div > div > div.col-md-2 {
-    margin: 0em 0em;
-    padding: 0em;
-    z-index: 1;
-    border-bottom-style: none;
-    border-top-style: none;
-    border-left-color: rgb(169,169,169);
-    border-right-color: rgb(169,169,169);
-}
-
-#wrap > div > div > div.col-md-2 > div > div.panel-heading {
-    background-color: rgb(217, 237, 247);
-}
-
-#wrap > div > div > div.col-md-2 > div > div.panel-body > p > span {
-    margin-right: 6px;
-}
-
-.online {
-    color: springgreen;
-}
-/*end of online*/
-
-/*start of footer*/
-#footerconst {
-    position: fixed;
-    bottom: 0;
-    max-width: 980px;
-    margin-top: -150px;
-    height: 100px;
-    clear: both;
-    padding-top: 10px;
-    z-index: 2;
-}
-
-/*end of footer*/
+/***************** end of online users column *************************/
