--- a/views/chat.html
+++ b/views/chat.html
@@ -1,5 +1,6 @@
-﻿<!DOCTYPE html>
-<head>
+<!DOCTYPE html>
+<html>
+<head lang="en">
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
     <meta name="description" content="Harvard Website to ask questions in class"/>
@@ -18,13 +19,19 @@
 
 </head>
 <body>
-<!--start of navbar-->
+
+
+<!--start of nav-->
+
+<!--the class static-top sticks nav bar at top, and fixed-top just fixes it at top-->
 <div class="navbar navbar-inverse navbar-static-top">
+
+    <!--'container' div makes sure our content is well centered on the screen-->
     <div class="container">
-        <a href="/" class="navbar-brand"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>  HarvardClass</a>
+        <a href="/" class="navbar-brand"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> ClassName</a>
 
         <!--button to target the navbar-right which will appear on collapse of navbar items-->
-        <button class = 'navbar-toggle' data-toggle="collapse" data-target=".navHeaderCollapse">
+        <button class='navbar-toggle' data-toggle="collapse" data-target=".navHeaderCollapse">
 
             <!--create the breadcrumb-->
             <span class="icon-bar"></span>
@@ -37,92 +44,75 @@
         <div class="collapse navbar-collapse navHeaderCollapse">
 
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="https://canvas.harvard.edu/" target="_blank">Canvas</a></li>
-                <li><a href="https://my.harvard.edu" target="_blank">my.harvard.edu</a></li>
-                <li id= 'signInName'><a href="#">About</a></li>
+                <li id='signInName'><a href="#">About</a></li>
                 <li id="logout"><a href="#">Beta!</a></li>
             </ul>
         </div>
     </div>
 </div>
-<!-- end of top nav bar-->
+<!--end of nav-->
 
+<!--middle container for newsfeed, top voted questions and online users-->
+<div class="container">
 
+    <div class="row">
 
+        <!--column for newsfeed-->
+        <div class="col-lg-7 col-md-6 col-sm-6">
 
+            <p><span>Question Feed: </span><span>Date</span></p>
+            <table class="table table-striped question_feed">
 
-
-
-<div id="wrap">
-    <div class="container">
-        <div class="row">
-
-            <!--start of question column-->
-            <div class="col-md-7">
-                <div class="panel panel-info">
-                    <div class="panel-heading">
-                        RECENT QUESTIONS
-                    </div>
-                    <div class="panel-body">
-                        <table class="table table-striped table-condensed table-responsive" id="thomas">
-
-                        </table>
-                    </div>
-
-                </div>
-            </div>
-            <!--end of question column-->
-
-            <!--start of top voted questions-->
-            <div class="col-md-3">
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        TOP VOTED QUESTIONS
-                    </div>
-                    <div class="panel-body" id="topQuestions">
-
-                    </div>
-                </div>
-
-            </div>
-            <!--end of top voted questions-->
-
-
-            <!--start of online users-->
-            <div class="col-md-2">
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        ONLINE
-                    </div>
-                    <div class="panel-body" id="onlineUsers">
-                    </div>
-                </div>
-
-            </div>
-            <!--end of online users-->
-
+            </table>
 
         </div>
+        <!--end of newsfeed-->
+
+        <!--start of top voted questions-->
+        <div class="col-lg-3 col-md-3 col-sm-5">
+            <p>Top Voted Questions</p>
+            <table class="table table-striped topQuestions" >
+
+            </table>
+        </div>
+        <!--end of top voted questions-->
+
+        <!--start of online users column-->
+        <div class="col-lg-2 col-md-2 col-sm-1 col-xs-2">
+
+            <p>Online</p>
+            <table class="table table-striped onlineUsers">
+
+            </table>
+
+        </div>
+        <!--end of online users column-->
+
+
     </div>
+    <!--end of row-->
+
 </div>
+<!--end of mid container-->
 
+<!--start of question input field-->
+<div class="container navbar-fixed-bottom">
+    <div class="panel-footer" id="footerconst">
+        <p>Please Professor, can you
+            <span><button class="btn btn-align btn-warning btn-xs">clarify?</button></span>
+            <span><button class="btn btn-align btn-warning btn-xs">give an example?</button></span>
+        </p>
 
-<!--start of footer-->
-<div class="panel-footer" class="col-md-7" id="footerconst">
-    <p>Please Professor, can you
-        <span><button class="btn btn-align btn-warning ">repeat/clarify?</button></span>
-        <span><button class="btn btn-align btn-warning">give an example?</button></span>
-        <!--<span><button class="btn">Stop for a second?</button></span>-->
-    </p>
-    <div class="input-group input-group-sm">
-        <input type="text" class="form-control" id="qfield" placeholder="Type your question"/>
+        <div class="input-group input-group-sm">
+            <textarea class="form-control" id="qfield" placeholder="Type your question" rows="1"></textarea>
                                     <span class="input-group-btn">
                                         <button class="btn btn-info" type="button" id="ask">ASK</button>
                                     </span>
-    </div>
+        </div>
 
+    </div>
 </div>
-<!--end of footer-->
+<!--end of question input field-->
 
 
 <!-- JAVASCRIPT -->
@@ -134,13 +124,14 @@
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
 <!-- Boostrap.js -->
-<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script type="text/javascript"
+        src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
 <!-- loads respond.js: enables responsive web designs in browsers that don't support CSS3 Media Queries - in particular, Internet Explorer 8 and under. -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+<script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 
-<!-- customchat javascript file: should be loaded after jquery-->
+<!-- customlogin javascript file: should be loaded after jquery-->
 <script type="text/javascript" src="customchat.js"></script>
-
 </body>
 </html>
