First MongoDB databse implemented, and UI changed

--- a/views/chat.html
+++ b/views/chat.html
@@ -1,148 +1,118 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-
+<!DOCTYPE html>
+<html>
+<head lang="en">
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
-    <!--[if IE]>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <![endif]-->
+    <meta name="description" content="Harvard Website to ask questions in class"/>
+    <meta name="author" content="Jovin Mwilanga"/>
 
-    <title>theHarvardClass</title>
+    <title>HarvardClass</title>
 
     <!-- loads bootstrap.css -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+
+    <!--loads font awesome-->
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- loads custom css file -->
     <link rel="stylesheet" href="custom.css" rel="stylesheet">
 
 </head>
-<body style="font-family:Verdana">
-<div id="wrap">
-    <!--start of top nav bar-->
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                        data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">CS50</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
-                    <li><a href="#">Classes</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">More
-                            <span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">One more separated link</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <form class="navbar-form navbar-left" role="search">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
-                    </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
-                </form>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#" id="logout">Register</a></li>
-                    <li><a href="#" id="signInName">Sign In</a></li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
-    <!-- end of top nav bar-->
+<body>
 
 
+<!--start of nav-->
+
+<!--the class static-top sticks nav bar at top, and fixed-top just fixes it at top-->
+<div class="navbar navbar-inverse navbar-static-top">
+
+    <!--'container' div makes sure our content is well centered on the screen-->
     <div class="container">
-        <div class="row">
+        <a href="/" class="navbar-brand"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> ClassName</a>
 
-            <!--start of question column-->
-            <div class="col-md-7">
-                <div class="panel panel-info">
-                    <div class="panel-heading">
-                        RECENT QUESTIONS
-                    </div>
-                    <div class="panel-body">
-                        <table class="table table-striped table-condensed table-responsive" id="thomas">
+        <!--button to target the navbar-right which will appear on collapse of navbar items-->
+        <button class='navbar-toggle' data-toggle="collapse" data-target=".navHeaderCollapse">
 
-                        </table>
-                    </div>
+            <!--create the breadcrumb-->
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
 
-                </div>
-            </div>
-            <!--end of question column-->
+        </button>
 
-            <!--start of top voted questions-->
-            <div class="col-md-3">
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        TOP VOTED QUESTIONS
-                    </div>
-                    <div class="panel-body" id="topQuestions">
+        <!--this navbar will be collapsed on mobile-->
+        <div class="collapse navbar-collapse navHeaderCollapse">
 
-                    </div>
-                </div>
-
-            </div>
-            <!--end of top voted questions-->
-
-
-            <!--start of online users-->
-            <div class="col-md-2">
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        ONLINE
-                    </div>
-                    <div class="panel-body" id="onlineUsers">
-                    </div>
-                </div>
-
-            </div>
-            <!--end of online users-->
-
-
+            <ul class="nav navbar-nav navbar-right">
+                <li id='signInName'><a href="#">About</a></li>
+                <li id="logout"><a href="#">Beta!</a></li>
+            </ul>
         </div>
     </div>
 </div>
+<!--end of nav-->
+
+<!--middle container for newsfeed, top voted questions and online users-->
+<div class="container">
+
+    <div class="row">
+
+        <!--column for newsfeed-->
+        <div class="col-lg-7 col-md-6 col-sm-6">
+
+            <p><span>Question Feed: </span><span>Date</span></p>
+            <table class="table table-striped question_feed">
+
+            </table>
+
+        </div>
+        <!--end of newsfeed-->
+
+        <!--start of top voted questions-->
+        <div class="col-lg-3 col-md-3 col-sm-5">
+            <p>Top Voted Questions</p>
+            <table class="table table-striped topQuestions" >
+
+            </table>
+        </div>
+        <!--end of top voted questions-->
+
+        <!--start of online users column-->
+        <div class="col-lg-2 col-md-2 col-sm-1 col-xs-2">
+
+            <p>Online</p>
+            <table class="table table-striped onlineUsers">
+
+            </table>
+
+        </div>
+        <!--end of online users column-->
 
 
-<!--start of footer-->
-<div class="panel-footer" class="col-md-7" id="footerconst">
-    <p>Please Professor, can you
-        <span><button class="btn btn-align btn-warning ">repeat/clarify?</button></span>
-        <span><button class="btn btn-align btn-warning">give an example?</button></span>
-        <!--<span><button class="btn">Stop for a second?</button></span>-->
-    </p>
-    <div class="input-group input-group-sm">
-        <input type="text" class="form-control" id="qfield" placeholder="Type your question"/>
+    </div>
+    <!--end of row-->
+
+</div>
+<!--end of mid container-->
+
+<!--start of question input field-->
+<div class="container navbar-fixed-bottom">
+    <div class="panel-footer" id="footerconst">
+        <p>Please Professor, can you
+            <span><button class="btn btn-align btn-warning btn-xs">clarify?</button></span>
+            <span><button class="btn btn-align btn-warning btn-xs">give an example?</button></span>
+        </p>
+
+        <div class="input-group input-group-sm">
+            <textarea class="form-control" id="qfield" placeholder="Type your question" rows="1"></textarea>
                                     <span class="input-group-btn">
                                         <button class="btn btn-info" type="button" id="ask">ASK</button>
                                     </span>
+        </div>
+
     </div>
-
 </div>
-<!--end of footer-->
-
+<!--end of question input field-->
 
 
 <!-- JAVASCRIPT -->
@@ -154,13 +124,14 @@
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
 <!-- Boostrap.js -->
-<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script type="text/javascript"
+        src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
 <!-- loads respond.js: enables responsive web designs in browsers that don't support CSS3 Media Queries - in particular, Internet Explorer 8 and under. -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+<script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 
-<!-- customchat javascript file: should be loaded after jquery-->
+<!-- customlogin javascript file: should be loaded after jquery-->
 <script type="text/javascript" src="customchat.js"></script>
-
 </body>
 </html>
