--- a/views/login.html
+++ b/views/login.html
@@ -3,36 +3,143 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>theHarvardClass - Login</title>
+    <meta name="description" content="Harvard Website to ask questions in class"/>
+    <meta name="author" content="Jovin Mwilanga"/>
+    <title>HarvardClass - Login</title>
 
     <!-- loads bootstrap.css -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 
+    <!--loads font awesome-->
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
     <!-- loads custom css file -->
-    <link rel="stylesheet" href="custom.css" rel="stylesheet">
+    <link rel="stylesheet" href="logincss.css" rel="stylesheet">
 
 </head>
 
 <body>
-<div id="welcome">
-    <h1>the HARVARD CLASSROOM</h1>
+
+<!--start of nav-->
+
+<!--the class static-top sticks nav bar at top, and fixed-top just fixes it at top-->
+<div class="navbar navbar-inverse navbar-static-top">
+
+    <!--'container' div makes sure our content is well centered on the screen-->
+    <div class="container">
+        <a href="/" class="navbar-brand"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> HarvardClass</a>
+
+        <!--button to target the navbar-right which will appear on collapse of navbar items-->
+        <button class='navbar-toggle' data-toggle="collapse" data-target=".navHeaderCollapse">
+
+            <!--create the breadcrumb-->
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+
+        </button>
+
+        <!--this navbar will be collapsed on mobile-->
+        <div class="collapse navbar-collapse navHeaderCollapse">
+
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="https://canvas.harvard.edu/" target="_blank">Canvas</a></li>
+                <li><a href="https://my.harvard.edu" target="_blank">my.harvard.edu</a></li>
+                <li id='signInName'><a href="#">About</a></li>
+                <li id="logout"><a href="#">Beta!</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
+<!--end of nav-->
 
-<div class = "col-md-3"></div>
+<!--start of jumbotron-->
+<div class='container'>
 
-<form class="col-md-6" id="loginform">
-    <div class="form-group">
-        <input type="text" class="form-control input-lg" placeholder="Custom Username" id="customUsername">
-    </div>
-    <div class="form-group">
-        <input type="password" class="form-control input-lg" placeholder="Class Code" id="customCode">
-    </div>
-    <div class="form-group">
-        <button class="btn btn-primary btn-lg btn-block" class="buttonback" id="toClass">Get in Class</button>
-    </div>
-</form>
+    <!--the text-center class centers everything in it-->
+    <div class="jumbotron text-center">
 
-<div class = "col-md-3"></div>
+        <h1>HARVARD CLASS</h1>
+
+        <p>"We have enriched the way people ask questions in class. Harvard Class was built with one goal only: To
+            bring a more dynamic Q/A classroom environment between the professor and students"</p>
+
+        <a class="btn btn-default"><i class="fa fa-info-circle"></i> About Us</a>
+        <a class="btn btn-default"><i class="fa fa-question"></i> Help</a>
+
+    </div>
+
+</div>
+<!--end of jumbotron-->
+
+<!--start of login with Harvard ID-->
+
+<!--to hide use:  style="display: none"-->
+<div class="container text-center">
+    <button type="submit" class="btn btn-default btn-danger btn-lg" id="harvardID">Log in with Harvard ID</button>
+</div>
+<!--end of login with Harvard ID-->
+
+
+
+<!--start of custom student login form-->
+<div class="container">
+    <form>
+        <div class="form-group">
+            <label for="customUsername">Username</label>
+            <input type="text" class="form-control" id="customUsername" placeholder="Enter your custom Username">
+        </div>
+
+        <div class="form-group">
+            <label for="customCode">Code</label>
+            <input type="password" class="form-control" id="customCode" placeholder="Password">
+        </div>
+
+        <button type="submit" class="btn btn-default btn-block" id="toClass">Get in Class</button>
+    </form>
+</div>
+<!--end of custom student login form-->
+
+
+
+<!--start of instructor login form-->
+<div class="container" style="display: none">
+    <form>
+        <div class="form-group">
+            <label for="email">Instructor's Email</label>
+            <input type="text" class="form-control" id="email" placeholder="Please enter your Email Address">
+        </div>
+
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" id="password" placeholder="Password">
+        </div>
+
+        <button type="submit" class="btn btn-default btn-block" id="toClass">Sign In</button>
+    </form>
+</div>
+<!--end of instructor login form-->
+
+<!--start of footer-->
+<div class='navbar navbar-default navbar-fixed-bottom'>
+    <!--'container div makes sure of correct alignment-->
+    <div class="container">
+
+        <!--the class navbar-text makes sure that the text is correctly centerd in the navbar-->
+        <!--the class pull-left floats the buttons to the left-->
+        <p class="navbar-text pull-left">
+            Site Built By Jovin Mwilanga: &copy; 2015 Harvard University
+        </p>
+
+        <!--the class navbar-btn styles the buttons for the nav-->
+        <!--the class pull-right floats the buttons to the right-->
+        <a class=" navbar-btn btn btn-info btn-xs pull-right">Status: Development</a>
+
+    </div>
+</div>
+<!--end of footer-->
+
+
 
 
 <!-- JAVASCRIPT -->
@@ -51,7 +158,5 @@
 
 <!-- customlogin javascript file: should be loaded after jquery-->
 <script type="text/javascript" src="customlogin.js"></script>
-
-
 </body>
 </html>
