renamed css and js files to more understandible names

--- a/views/chat.html
+++ b/views/chat.html
@@ -15,7 +15,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- loads custom css file -->
-    <link rel="stylesheet" href="custom.css" rel="stylesheet">
+    <link rel="stylesheet" href="chat.css" rel="stylesheet">
 
 </head>
 <body>
@@ -132,6 +132,6 @@
         src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 
 <!-- customlogin javascript file: should be loaded after jquery-->
-<script type="text/javascript" src="customchat.js"></script>
+<script type="text/javascript" src="chat.js"></script>
 </body>
 </html>
