--- a/views/login.html
+++ b/views/login.html
@@ -14,7 +14,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- loads custom css file -->
-    <link rel="stylesheet" href="logincss.css" rel="stylesheet">
+    <link rel="stylesheet" href="login.css" rel="stylesheet">
 
 </head>
 
@@ -157,6 +157,6 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 
 <!-- customlogin javascript file: should be loaded after jquery-->
-<script type="text/javascript" src="customlogin.js"></script>
+<script type="text/javascript" src="login.js"></script>
 </body>
 </html>
