--- a/views/login.html
+++ b/views/login.html
@@ -84,7 +84,7 @@
           method="post"
           id="harvardIdLoginForm">
 
-        <input type="text" name="https://id.cs50.net/" value="https://id.cs50.net/"/>
+        <input type="text" name="openid_identifier" value="https://id.cs50.net/"/>
 
         <button type="submit" class="btn btn-default btn-danger btn-lg" id="harvardID">Log in with Harvard ID</button>
     </form>
