Started implementing passportSocketio

--- a/views/chat.html
+++ b/views/chat.html
@@ -130,6 +130,9 @@
 <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 
+<!-- loads jquery cookie plugin -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+
 <!-- customlogin javascript file: should be loaded after jquery-->
 <script type="text/javascript" src="chat.js"></script>
 </body>
