temp host shift changes

--- a/views/login1.html
+++ b/views/login1.html
@@ -89,7 +89,7 @@
 
         <!--Username field-->
         <div class="form-group">
-            <label for="customUsername">Username</label>
+            <label for="customUsername">Custom Username</label>
             <input type="text"
                    class="form-control"
                    id="customUsername"
